[gd_scene load_steps=17 format=3 uid="uid://bcakhf7qerhen"]

[ext_resource type="Script" path="res://code/player.gd" id="1_6gu0m"]
[ext_resource type="Script" path="res://scene platform/Camera2D.gd" id="2_w4frf"]
[ext_resource type="AudioStream" uid="uid://b2l8c04rm8fkc" path="res://audio/Jumping Jump 3.wav" id="3_yaeha"]
[ext_resource type="Texture2D" uid="uid://ct4hd4cudw3hw" path="res://img/persovert/2 vert.png" id="4_ldr75"]
[ext_resource type="Script" path="res://code/vague.gd" id="4_y80f4"]
[ext_resource type="Texture2D" uid="uid://dlb0efsoh3pbj" path="res://img/persovert/1 vert.png" id="5_60ncu"]
[ext_resource type="Texture2D" uid="uid://fq034ddk2ft1" path="res://img/image_fond_chateau/fond chateau-04 3.png" id="5_vh1xw"]
[ext_resource type="Texture2D" uid="uid://csjw3ygv00rxp" path="res://img/image_fond_chateau/fond chateau_Plan de travail 1 copie 3 1.png" id="6_r6wo7"]
[ext_resource type="Texture2D" uid="uid://dfhu5kkcd3di1" path="res://img/image_fond_chateau/fond chateau_Plan de travail 1 copie 4.png" id="7_p8o5k"]
[ext_resource type="Script" path="res://code/entrerTableau1.gd" id="9_totdb"]
[ext_resource type="Script" path="res://code/entrerTableau2.gd" id="10_50usc"]
[ext_resource type="Script" path="res://code/entrerTableau3.gd" id="11_q3umh"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_j72ki"]
size = Vector2(63, 134.5)

[sub_resource type="SpriteFrames" id="SpriteFrames_s3oun"]
animations = [{
"frames": [],
"loop": true,
"name": &"jump",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("4_ldr75")
}, {
"duration": 1.0,
"texture": ExtResource("5_60ncu")
}],
"loop": true,
"name": &"walk",
"speed": 5.0
}]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_36tff"]
size = Vector2(5793, 106)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_64sfl"]
size = Vector2(208, 122)

[node name="scene_chateau" type="Node2D"]

[node name="ParallaxBackground" type="ParallaxBackground" parent="."]

[node name="ParallaxLayer" type="ParallaxLayer" parent="ParallaxBackground"]

[node name="Sprite2D" type="Sprite2D" parent="ParallaxBackground/ParallaxLayer"]
z_index = -3
position = Vector2(-1.0842e-19, -0.00012207)
scale = Vector2(1.01401, 1.01401)
texture = ExtResource("5_vh1xw")
centered = false

[node name="player" type="CharacterBody2D" parent="."]
z_index = 1
position = Vector2(3518, 644)
script = ExtResource("1_6gu0m")
metadata/_edit_group_ = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="player"]
position = Vector2(3.5, -0.25)
shape = SubResource("RectangleShape2D_j72ki")
metadata/_edit_group_ = true

[node name="Marker2D" type="Marker2D" parent="player"]
position = Vector2(54, 11)

[node name="AudioStreamPlayer2D" type="AudioStreamPlayer2D" parent="player"]
stream = ExtResource("3_yaeha")
script = ExtResource("4_y80f4")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="player"]
position = Vector2(2, 1)
scale = Vector2(0.29, 0.29)
sprite_frames = SubResource("SpriteFrames_s3oun")
animation = &"walk"

[node name="Camera2D" type="Camera2D" parent="."]
position = Vector2(959, 542)
process_callback = 0
script = ExtResource("2_w4frf")

[node name="Le sol" type="StaticBody2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Le sol"]
position = Vector2(2897, 1053)
shape = SubResource("RectangleShape2D_36tff")

[node name="tableau_level1" type="StaticBody2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="tableau_level1"]

[node name="Sprite2D" type="Sprite2D" parent="tableau_level1"]
position = Vector2(4252, 665)
scale = Vector2(0.8, 0.8)
texture = ExtResource("6_r6wo7")

[node name="tableau_level2" type="StaticBody2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="tableau_level2"]

[node name="Sprite2D" type="Sprite2D" parent="tableau_level2"]
position = Vector2(4896, 665)
scale = Vector2(0.8, 0.8)
texture = ExtResource("7_p8o5k")

[node name="tableau_level3" type="StaticBody2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="tableau_level3"]

[node name="Sprite2D" type="Sprite2D" parent="tableau_level3"]
position = Vector2(5532, 665)
scale = Vector2(0.8, 0.8)
texture = ExtResource("7_p8o5k")

[node name="zoneDetclevel1" type="Area2D" parent="."]
position = Vector2(4257, 936)
script = ExtResource("9_totdb")
metadata/_edit_group_ = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="zoneDetclevel1"]
shape = SubResource("RectangleShape2D_64sfl")

[node name="zoneDetclevel2" type="Area2D" parent="."]
position = Vector2(4903, 936)
script = ExtResource("10_50usc")
metadata/_edit_group_ = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="zoneDetclevel2"]
shape = SubResource("RectangleShape2D_64sfl")

[node name="zoneDetclevel3" type="Area2D" parent="."]
position = Vector2(5536, 936)
script = ExtResource("11_q3umh")
metadata/_edit_group_ = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="zoneDetclevel3"]
shape = SubResource("RectangleShape2D_64sfl")

[node name="Label" type="Label" parent="."]
offset_left = 4157.0
offset_top = 811.0
offset_right = 4360.0
offset_bottom = 856.0
theme_override_font_sizes/font_size = 30
text = "Appuyer sur E"

[node name="Label2" type="Label" parent="."]
offset_left = 4803.0
offset_top = 811.0
offset_right = 5006.0
offset_bottom = 856.0
theme_override_font_sizes/font_size = 30
text = "Appuyer sur E"

[node name="Label3" type="Label" parent="."]
offset_left = 5437.0
offset_top = 811.0
offset_right = 5640.0
offset_bottom = 856.0
theme_override_font_sizes/font_size = 30
text = "Appuyer sur E"

[connection signal="body_entered" from="zoneDetclevel1" to="zoneDetclevel1" method="detecEntrerlabel1"]
[connection signal="body_exited" from="zoneDetclevel1" to="zoneDetclevel1" method="detectSortiLabel1"]
[connection signal="body_entered" from="zoneDetclevel2" to="zoneDetclevel2" method="detecEntrerlabel2"]
[connection signal="body_exited" from="zoneDetclevel2" to="zoneDetclevel2" method="detectSortiLabel2"]
[connection signal="body_entered" from="zoneDetclevel3" to="zoneDetclevel3" method="detectEntrerlabel3"]
[connection signal="body_exited" from="zoneDetclevel3" to="zoneDetclevel3" method="detectSortiLabel3"]
